# xlsx-diff-html

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  package-lock.json  package.json  xlsx-diff-html  xlsx-diff-html.mjs
.github/workflows/: build.yml
lib/: daff.mjs  direct-compare.mjs  engine.mjs  git.mjs
scripts/: build-dmg.sh  build-sidecar.ps1  build-sidecar.sh
test/: daff.test.mjs  direct-compare.test.mjs
xlsx-diff-html-tauri/: package-lock.json  package.json
xlsx-diff-html-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
xlsx-diff-html-tauri/src-tauri/capabilities/: default.json  native-dialog-remote.json
xlsx-diff-html-tauri/src-tauri/icons/: icon.icns
xlsx-diff-html-tauri/src-tauri/permissions/autogenerated/: pick_native_path.toml
xlsx-diff-html-tauri/src-tauri/src/: main.rs
xlsx-diff-html-web/app/: server.mjs
xlsx-diff-html-web/app/public/: app.js  index.html  styles.css
