[package]
name = "xlsx-diff-html"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = [] }
tauri-plugin-shell           = "2"
tauri-plugin-single-instance = "2"
dirs                         = "5"
